@@ -1,6 +1,13 @@
 devel
 -----
 
+* Make background statistics gathering more efficient by avoiding one AQL query
+  every 10 seconds that fetched the most recent stats entry. Instead, buffer 
+  the entry in value after we have written it. Also spread out the statistics
+  calls by different servers more randomly, so that request spikes are avoided
+  for cluster with many coordinators that used to run their statistics queries
+  at about the same time when the instances were started simultaneously.
+
 * Fixed ES-881: Fixed LDAP global options. This needs to use the first active
   provider, not just the first provider and it should be globally disabled.
 
